--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
 	<div class="p-6 max-w-md mx-auto bg-white rounded-md shadow-lg flex items-center space-x-4 mt-10">
 		<div class="grid grid-cols-3 gap-2">
-			<div class="col-span-2 sm:col-span-2">
+			<div id="newtask" class="col-span-2 sm:col-span-2">
 				<input type="text" class="pl-7 pr-12 mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" placeholder="Task to be done">
 			</div>
 			<div class="col-span-1 sm:col-span-1">
@@ -26,6 +26,9 @@
 		</div>
 	</div>
 
+	<div class="p-6 max-w-md mx-auto bg-white rounded-md shadow-lg flex items-center space-x-4 mt-10">
+		<div id="tasks"></div>
+	</div>
 
 
 	
